# osm4routing2

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs
src/osm4routing/: categorize.rs  mod.rs  models.rs  profile_type.rs  reader.rs  writers.rs
src/osm4routing/categorize/: edge_properties.rs  mod.rs
src/osm4routing/categorize/railway/: edge_properties.rs
src/osm4routing/categorize/road/: edge_properties.rs  mod.rs
src/osm4routing/models/: coord.rs  edge.rs  mod.rs  node.rs
src/osm4routing/test_data/: road.osm.pbf  street.osm
src/osm4routing/testdata/: minimal.osm  minimal.osm.pbf
src/osm4routing/writers/: edges.rs  geohashes.rs  mod.rs  nodes.rs  writer.rs
