[package]
name = "osm4routing-railway"
edition = "2021"
version = "0.0.1"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
description = "Convert OpenStreetMap data into routing friendly CSV"
homepage = "https://github.com/Tristramg/osm4routing2"
readme = "readme.md"
license = "MIT"

[dependencies]
osmpbfreader = "0.16.0"
csv = "1.1.3"
docopt = "1.1.0"
serde = "1.0"
geohashrust = "0.0.2"
polars = {version = "0.29.0", features = ["lazy"]}

[lib]
name = "osm4routing"
